Added footer to website

--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Oasis</title>
-    <link rel="stylesheet" href="css/main.css">
-  </head>
-  <body>
-    <h1>Oasis</h1>
-    <h2>My Oasis fansite</h2>
-    <p>
-      Oasis are really good and stuff.
-    </p>
-  </body>
-</html>
+<!DOCTYPE html><html>  <head>    <title>Oasis</title>    <link rel="stylesheet" href="css/main.css">  </head>  <body>    <h1>Oasis</h1>    <h2>My Oasis fansite</h2>    <p>      Oasis are really good and stuff.    </p>	<p>Although I prefer Pink Floyd</p>	<footer>	&copy; 2015 oasis.	</footer>  </body></html>
